RESOLVED FIXED310728
REGRESSION(309929@main): Internal iOS build is broken ('c_str' not found on object of type 'NSString *')
https://bugs.webkit.org/show_bug.cgi?id=310728
Summary REGRESSION(309929@main): Internal iOS build is broken ('c_str' not found on o...
Abrar Rahman Protyasha
Reported 2026-03-25 12:48:31 PDT
``` Source/WebKit/UIProcess/Downloads/DownloadProxyCocoa.mm:93:160: error: property 'c_str' not found on object of type 'NSString *' 93 | RELEASE_LOG_ERROR(Network, "DownloadProxy::bookmarkDataForURL: Failed to create bookmark data for URL, error = %" PUBLIC_LOG_STRING, error.description.c_str()); ```
Attachments
Radar WebKit Bug Importer
Comment 1 2026-03-25 12:48:38 PDT
Abrar Rahman Protyasha
Comment 2 2026-03-25 12:52:01 PDT
EWS
Comment 3 2026-03-25 12:55:39 PDT
Committed 309936@main (2b08ea78dbc5): <https://commits.webkit.org/309936@main> Reviewed commits have been landed. Closing PR #61348 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.