REGRESSION(309929@main): Internal iOS build is broken ('c_str' not found on object of type 'NSString *') https://bugs.webkit.org/show_bug.cgi?id=310728 rdar://173346231

Unreviewed build fix.

NSError.description field is an NSString and such does not have the
std::basic_string<T>::c_str() interface. Replace with UTF8String.

* Source/WebKit/UIProcess/Downloads/DownloadProxyCocoa.mm:
(WebKit::DownloadProxy::bookmarkDataForURL):

Canonical link: https://commits.webkit.org/309936@main