Source/WebKit/UIProcess/Downloads/DownloadProxyCocoa.mm
@@ -90,7 +90,7 @@ Vector<uint8_t> DownloadProxy::bookmarkDataForURL(const URL& url)
     NSError *error = nil;
     RetainPtr bookmark = [localURL bookmarkDataWithOptions:NSURLBookmarkCreationMinimalBookmark includingResourceValuesForKeys:nil relativeToURL:nil error:&error];
     if (!bookmark && error)
-        RELEASE_LOG_ERROR(Network, "DownloadProxy::bookmarkDataForURL: Failed to create bookmark data for URL, error = %" PUBLIC_LOG_STRING, error.description.c_str());
+        RELEASE_LOG_ERROR(Network, "DownloadProxy::bookmarkDataForURL: Failed to create bookmark data for URL, error = %" PUBLIC_LOG_STRING, error.description.UTF8String);
     return span(bookmark.get());
 }
 
